// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SystemPolicyCards component should render loading state 1`] = `
<IntlProvider
  defaultFormats={Object {}}
  defaultLocale="en"
  formats={Object {}}
  locale="en-US"
  messages={Object {}}
  onError={[Function]}
  textComponent={Symbol(react.fragment)}
>
  <SystemPolicyCards
    loading={true}
    policies={
      Array [
        Object {
          "compliant": false,
          "lastScanned": "2019-03-06T06:20:13Z",
          "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
          "refId": "xccdf_org.ssgproject.content_profile_pci-dss",
          "rulesFailed": 10,
          "rulesPassed": 30,
          "score": 75,
          "ssgVersion": "0.1.45",
          "supported": true,
        },
        Object {
          "compliant": false,
          "lastScanned": null,
          "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7 2",
          "refId": "xccdf_org.ssgproject.content_profile_pci-dss2",
          "rulesFailed": 0,
          "rulesPassed": 0,
          "score": 0,
          "ssgVersion": "0.1.45",
          "supported": true,
        },
      ]
    }
  >
    <Grid
      hasGutter={true}
    >
      <div
        className="pf-l-grid pf-m-gutter"
      >
        <GridItem
          key="0"
          lg={6}
          md={12}
          sm={12}
          xl={4}
        >
          <div
            className="pf-l-grid__item pf-m-12-col-on-sm pf-m-12-col-on-md pf-m-6-col-on-lg pf-m-4-col-on-xl"
          >
            <SystemPolicyCard
              policy={
                Object {
                  "compliant": false,
                  "lastScanned": "2019-03-06T06:20:13Z",
                  "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
                  "refId": "xccdf_org.ssgproject.content_profile_pci-dss",
                  "rulesFailed": 10,
                  "rulesPassed": 30,
                  "score": 75,
                  "ssgVersion": "0.1.45",
                  "supported": true,
                }
              }
              style={
                Object {
                  "height": "100%",
                }
              }
            >
              <Card
                style={
                  Object {
                    "height": "100%",
                  }
                }
              >
                <article
                  className="pf-c-card"
                  data-ouia-component-id="OUIA-Generated-Card-1"
                  data-ouia-component-type="PF4/Card"
                  data-ouia-safe={true}
                  id=""
                  style={
                    Object {
                      "height": "100%",
                    }
                  }
                >
                  <CardBody>
                    <div
                      className="pf-c-card__body"
                    >
                      <TextContent
                        className="margin-bottom-md"
                      >
                        <div
                          className="pf-c-content margin-bottom-md"
                        >
                          <Text
                            className="margin-bottom-top-none"
                            component="h4"
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                          >
                            <h4
                              className="margin-bottom-top-none"
                              data-pf-content={true}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                            >
                              <Truncate
                                ellipsis="…"
                                lines={1}
                                trimWhitespace={false}
                                width={0}
                              >
                                <span
                                  width={0}
                                >
                                  <span />
                                  <span>
                                    PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7
                                  </span>
                                  <span
                                    style={
                                      Object {
                                        "left": 0,
                                        "position": "fixed",
                                        "top": 0,
                                        "visibility": "hidden",
                                      }
                                    }
                                  >
                                    …
                                  </span>
                                </span>
                              </Truncate>
                            </h4>
                          </Text>
                          <Text
                            component="small"
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            style={
                              Object {
                                "color": "var(--pf-global--Color--200)",
                              }
                            }
                          >
                            <small
                              className=""
                              data-pf-content={true}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              style={
                                Object {
                                  "color": "var(--pf-global--Color--200)",
                                }
                              }
                            >
                              <Truncate
                                ellipsis="…"
                                lines={1}
                                trimWhitespace={false}
                                width={0}
                              >
                                <span
                                  width={0}
                                >
                                  <span />
                                  <span />
                                  <span
                                    style={
                                      Object {
                                        "left": 0,
                                        "position": "fixed",
                                        "top": 0,
                                        "visibility": "hidden",
                                      }
                                    }
                                  >
                                    …
                                  </span>
                                </span>
                              </Truncate>
                            </small>
                          </Text>
                        </div>
                      </TextContent>
                      <div
                        className="margin-bottom-md"
                      >
                        <div
                          className="ins-c-policy-card ins-m-noncompliant"
                        >
                          <ExclamationCircleIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                              />
                            </svg>
                          </ExclamationCircleIcon>
                           Not compliant
                        </div>
                        <Text
                          component="small"
                        >
                          <small
                            className=""
                            data-pf-content={true}
                          >
                            10
                             rule
                            s
                             failed
                             
                            <Tooltip
                              content="The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy."
                              maxWidth="22em"
                              position="bottom"
                            >
                              <Popper
                                appendTo={[Function]}
                                distance={15}
                                enableFlip={true}
                                flipBehavior={
                                  Array [
                                    "top",
                                    "right",
                                    "bottom",
                                    "left",
                                    "top",
                                    "right",
                                    "bottom",
                                  ]
                                }
                                isVisible={false}
                                onBlur={[Function]}
                                onDocumentClick={false}
                                onDocumentKeyDown={[Function]}
                                onFocus={[Function]}
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                onTriggerEnter={[Function]}
                                placement="bottom"
                                popper={
                                  <div
                                    className="pf-c-tooltip"
                                    id="pf-tooltip-1"
                                    role="tooltip"
                                    style={
                                      Object {
                                        "maxWidth": "22em",
                                        "opacity": 0,
                                        "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                                      }
                                    }
                                  >
                                    <TooltipArrow />
                                    <TooltipContent
                                      isLeftAligned={false}
                                    >
                                      The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy.
                                    </TooltipContent>
                                  </div>
                                }
                                popperMatchesTriggerWidth={false}
                                positionModifiers={
                                  Object {
                                    "bottom": "pf-m-bottom",
                                    "left": "pf-m-left",
                                    "right": "pf-m-right",
                                    "top": "pf-m-top",
                                  }
                                }
                                trigger={
                                  <span>
                                    (Score: 
                                    75%
                                    )
                                  </span>
                                }
                                zIndex={9999}
                              >
                                <FindRefWrapper
                                  onFoundRef={[Function]}
                                >
                                  <span>
                                    (Score: 
                                    75%
                                    )
                                  </span>
                                </FindRefWrapper>
                              </Popper>
                            </Tooltip>
                          </small>
                        </Text>
                      </div>
                      <Text
                        className="margin-bottom-none"
                        component="small"
                      >
                        <small
                          className="margin-bottom-none"
                          data-pf-content={true}
                        >
                          <Text>
                            <p
                              className=""
                              data-pf-content={true}
                            >
                              SSG version: 
                              0.1.45
                            </p>
                          </Text>
                          <Text>
                            <p
                              className=""
                              data-pf-content={true}
                            >
                              Last scanned: 
                              <DateFormat
                                date={1551853213000}
                                type="relative"
                              >
                                <Tooltip
                                  content={
                                    <div>
                                      
                                      06 Mar 2019 06:20 UTC
                                    </div>
                                  }
                                >
                                  <Popper
                                    appendTo={[Function]}
                                    distance={15}
                                    enableFlip={true}
                                    flipBehavior={
                                      Array [
                                        "top",
                                        "right",
                                        "bottom",
                                        "left",
                                        "top",
                                        "right",
                                        "bottom",
                                      ]
                                    }
                                    isVisible={false}
                                    onBlur={[Function]}
                                    onDocumentClick={false}
                                    onDocumentKeyDown={[Function]}
                                    onFocus={[Function]}
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    onTriggerEnter={[Function]}
                                    placement="top"
                                    popper={
                                      <div
                                        className="pf-c-tooltip"
                                        id="pf-tooltip-2"
                                        role="tooltip"
                                        style={
                                          Object {
                                            "maxWidth": null,
                                            "opacity": 0,
                                            "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                                          }
                                        }
                                      >
                                        <TooltipArrow />
                                        <TooltipContent
                                          isLeftAligned={false}
                                        >
                                          <div>
                                            
                                            06 Mar 2019 06:20 UTC
                                          </div>
                                        </TooltipContent>
                                      </div>
                                    }
                                    popperMatchesTriggerWidth={false}
                                    positionModifiers={
                                      Object {
                                        "bottom": "pf-m-bottom",
                                        "left": "pf-m-left",
                                        "right": "pf-m-right",
                                        "top": "pf-m-top",
                                      }
                                    }
                                    trigger={
                                      <span>
                                        2 years ago
                                      </span>
                                    }
                                    zIndex={9999}
                                  >
                                    <FindRefWrapper
                                      onFoundRef={[Function]}
                                    >
                                      <span>
                                        2 years ago
                                      </span>
                                    </FindRefWrapper>
                                  </Popper>
                                </Tooltip>
                              </DateFormat>
                            </p>
                          </Text>
                        </small>
                      </Text>
                    </div>
                  </CardBody>
                </article>
              </Card>
            </SystemPolicyCard>
          </div>
        </GridItem>
        <GridItem
          key="0"
          span={4}
        >
          <div
            className="pf-l-grid__item pf-m-4-col"
          >
            <Card>
              <article
                className="pf-c-card"
                data-ouia-component-id="OUIA-Generated-Card-2"
                data-ouia-component-type="PF4/Card"
                data-ouia-safe={true}
                id=""
              >
                <CardBody>
                  <div
                    className="pf-c-card__body"
                  >
                    <Instagram />
                  </div>
                </CardBody>
              </article>
            </Card>
          </div>
        </GridItem>
        <GridItem
          key="1"
          span={4}
        >
          <div
            className="pf-l-grid__item pf-m-4-col"
          >
            <Card>
              <article
                className="pf-c-card"
                data-ouia-component-id="OUIA-Generated-Card-3"
                data-ouia-component-type="PF4/Card"
                data-ouia-safe={true}
                id=""
              >
                <CardBody>
                  <div
                    className="pf-c-card__body"
                  >
                    <Instagram />
                  </div>
                </CardBody>
              </article>
            </Card>
          </div>
        </GridItem>
        <GridItem
          key="2"
          span={4}
        >
          <div
            className="pf-l-grid__item pf-m-4-col"
          >
            <Card>
              <article
                className="pf-c-card"
                data-ouia-component-id="OUIA-Generated-Card-4"
                data-ouia-component-type="PF4/Card"
                data-ouia-safe={true}
                id=""
              >
                <CardBody>
                  <div
                    className="pf-c-card__body"
                  >
                    <Instagram />
                  </div>
                </CardBody>
              </article>
            </Card>
          </div>
        </GridItem>
      </div>
    </Grid>
  </SystemPolicyCards>
</IntlProvider>
`;

exports[`SystemPolicyCards component should render real table 1`] = `
<IntlProvider
  defaultFormats={Object {}}
  defaultLocale="en"
  formats={Object {}}
  locale="en-US"
  messages={Object {}}
  onError={[Function]}
  textComponent={Symbol(react.fragment)}
>
  <SystemPolicyCards
    loading={false}
    policies={
      Array [
        Object {
          "compliant": false,
          "lastScanned": "2019-03-06T06:20:13Z",
          "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
          "refId": "xccdf_org.ssgproject.content_profile_pci-dss",
          "rulesFailed": 10,
          "rulesPassed": 30,
          "score": 75,
          "ssgVersion": "0.1.45",
          "supported": true,
        },
        Object {
          "compliant": false,
          "lastScanned": null,
          "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7 2",
          "refId": "xccdf_org.ssgproject.content_profile_pci-dss2",
          "rulesFailed": 0,
          "rulesPassed": 0,
          "score": 0,
          "ssgVersion": "0.1.45",
          "supported": true,
        },
      ]
    }
  >
    <Grid
      hasGutter={true}
    >
      <div
        className="pf-l-grid pf-m-gutter"
      >
        <GridItem
          key="0"
          lg={6}
          md={12}
          sm={12}
          xl={4}
        >
          <div
            className="pf-l-grid__item pf-m-12-col-on-sm pf-m-12-col-on-md pf-m-6-col-on-lg pf-m-4-col-on-xl"
          >
            <SystemPolicyCard
              policy={
                Object {
                  "compliant": false,
                  "lastScanned": "2019-03-06T06:20:13Z",
                  "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
                  "refId": "xccdf_org.ssgproject.content_profile_pci-dss",
                  "rulesFailed": 10,
                  "rulesPassed": 30,
                  "score": 75,
                  "ssgVersion": "0.1.45",
                  "supported": true,
                }
              }
              style={
                Object {
                  "height": "100%",
                }
              }
            >
              <Card
                style={
                  Object {
                    "height": "100%",
                  }
                }
              >
                <article
                  className="pf-c-card"
                  data-ouia-component-id="OUIA-Generated-Card-5"
                  data-ouia-component-type="PF4/Card"
                  data-ouia-safe={true}
                  id=""
                  style={
                    Object {
                      "height": "100%",
                    }
                  }
                >
                  <CardBody>
                    <div
                      className="pf-c-card__body"
                    >
                      <TextContent
                        className="margin-bottom-md"
                      >
                        <div
                          className="pf-c-content margin-bottom-md"
                        >
                          <Text
                            className="margin-bottom-top-none"
                            component="h4"
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                          >
                            <h4
                              className="margin-bottom-top-none"
                              data-pf-content={true}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                            >
                              <Truncate
                                ellipsis="…"
                                lines={1}
                                trimWhitespace={false}
                                width={0}
                              >
                                <span
                                  width={0}
                                >
                                  <span />
                                  <span>
                                    PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7
                                  </span>
                                  <span
                                    style={
                                      Object {
                                        "left": 0,
                                        "position": "fixed",
                                        "top": 0,
                                        "visibility": "hidden",
                                      }
                                    }
                                  >
                                    …
                                  </span>
                                </span>
                              </Truncate>
                            </h4>
                          </Text>
                          <Text
                            component="small"
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            style={
                              Object {
                                "color": "var(--pf-global--Color--200)",
                              }
                            }
                          >
                            <small
                              className=""
                              data-pf-content={true}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              style={
                                Object {
                                  "color": "var(--pf-global--Color--200)",
                                }
                              }
                            >
                              <Truncate
                                ellipsis="…"
                                lines={1}
                                trimWhitespace={false}
                                width={0}
                              >
                                <span
                                  width={0}
                                >
                                  <span />
                                  <span />
                                  <span
                                    style={
                                      Object {
                                        "left": 0,
                                        "position": "fixed",
                                        "top": 0,
                                        "visibility": "hidden",
                                      }
                                    }
                                  >
                                    …
                                  </span>
                                </span>
                              </Truncate>
                            </small>
                          </Text>
                        </div>
                      </TextContent>
                      <div
                        className="margin-bottom-md"
                      >
                        <div
                          className="ins-c-policy-card ins-m-noncompliant"
                        >
                          <ExclamationCircleIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                              />
                            </svg>
                          </ExclamationCircleIcon>
                           Not compliant
                        </div>
                        <Text
                          component="small"
                        >
                          <small
                            className=""
                            data-pf-content={true}
                          >
                            10
                             rule
                            s
                             failed
                             
                            <Tooltip
                              content="The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy."
                              maxWidth="22em"
                              position="bottom"
                            >
                              <Popper
                                appendTo={[Function]}
                                distance={15}
                                enableFlip={true}
                                flipBehavior={
                                  Array [
                                    "top",
                                    "right",
                                    "bottom",
                                    "left",
                                    "top",
                                    "right",
                                    "bottom",
                                  ]
                                }
                                isVisible={false}
                                onBlur={[Function]}
                                onDocumentClick={false}
                                onDocumentKeyDown={[Function]}
                                onFocus={[Function]}
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                onTriggerEnter={[Function]}
                                placement="bottom"
                                popper={
                                  <div
                                    className="pf-c-tooltip"
                                    id="pf-tooltip-3"
                                    role="tooltip"
                                    style={
                                      Object {
                                        "maxWidth": "22em",
                                        "opacity": 0,
                                        "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                                      }
                                    }
                                  >
                                    <TooltipArrow />
                                    <TooltipContent
                                      isLeftAligned={false}
                                    >
                                      The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy.
                                    </TooltipContent>
                                  </div>
                                }
                                popperMatchesTriggerWidth={false}
                                positionModifiers={
                                  Object {
                                    "bottom": "pf-m-bottom",
                                    "left": "pf-m-left",
                                    "right": "pf-m-right",
                                    "top": "pf-m-top",
                                  }
                                }
                                trigger={
                                  <span>
                                    (Score: 
                                    75%
                                    )
                                  </span>
                                }
                                zIndex={9999}
                              >
                                <FindRefWrapper
                                  onFoundRef={[Function]}
                                >
                                  <span>
                                    (Score: 
                                    75%
                                    )
                                  </span>
                                </FindRefWrapper>
                              </Popper>
                            </Tooltip>
                          </small>
                        </Text>
                      </div>
                      <Text
                        className="margin-bottom-none"
                        component="small"
                      >
                        <small
                          className="margin-bottom-none"
                          data-pf-content={true}
                        >
                          <Text>
                            <p
                              className=""
                              data-pf-content={true}
                            >
                              SSG version: 
                              0.1.45
                            </p>
                          </Text>
                          <Text>
                            <p
                              className=""
                              data-pf-content={true}
                            >
                              Last scanned: 
                              <DateFormat
                                date={1551853213000}
                                type="relative"
                              >
                                <Tooltip
                                  content={
                                    <div>
                                      
                                      06 Mar 2019 06:20 UTC
                                    </div>
                                  }
                                >
                                  <Popper
                                    appendTo={[Function]}
                                    distance={15}
                                    enableFlip={true}
                                    flipBehavior={
                                      Array [
                                        "top",
                                        "right",
                                        "bottom",
                                        "left",
                                        "top",
                                        "right",
                                        "bottom",
                                      ]
                                    }
                                    isVisible={false}
                                    onBlur={[Function]}
                                    onDocumentClick={false}
                                    onDocumentKeyDown={[Function]}
                                    onFocus={[Function]}
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    onTriggerEnter={[Function]}
                                    placement="top"
                                    popper={
                                      <div
                                        className="pf-c-tooltip"
                                        id="pf-tooltip-4"
                                        role="tooltip"
                                        style={
                                          Object {
                                            "maxWidth": null,
                                            "opacity": 0,
                                            "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                                          }
                                        }
                                      >
                                        <TooltipArrow />
                                        <TooltipContent
                                          isLeftAligned={false}
                                        >
                                          <div>
                                            
                                            06 Mar 2019 06:20 UTC
                                          </div>
                                        </TooltipContent>
                                      </div>
                                    }
                                    popperMatchesTriggerWidth={false}
                                    positionModifiers={
                                      Object {
                                        "bottom": "pf-m-bottom",
                                        "left": "pf-m-left",
                                        "right": "pf-m-right",
                                        "top": "pf-m-top",
                                      }
                                    }
                                    trigger={
                                      <span>
                                        2 years ago
                                      </span>
                                    }
                                    zIndex={9999}
                                  >
                                    <FindRefWrapper
                                      onFoundRef={[Function]}
                                    >
                                      <span>
                                        2 years ago
                                      </span>
                                    </FindRefWrapper>
                                  </Popper>
                                </Tooltip>
                              </DateFormat>
                            </p>
                          </Text>
                        </small>
                      </Text>
                    </div>
                  </CardBody>
                </article>
              </Card>
            </SystemPolicyCard>
          </div>
        </GridItem>
      </div>
    </Grid>
  </SystemPolicyCards>
</IntlProvider>
`;
